--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,4 +4,10 @@
 
 <p id="para2">this is for testing purpose</p>
 
-<p>{{ somestring}}</p>
+<div class="list">
+<div class="list-items">
+    <ul>
+      <li *ngFor="let item of testarr[0]; ">{{item.id}}</li>
+    </ul>
+</div>
+</div>
